@@ -2,6 +2,9 @@
 
 	* lib/qwik/act-ruby.rb: Refactoring.
 
+	* lib/qwik/farm.rb: Create _QwikSite.txt when the site is created.
+	* lib/qwik/site.rb: Add a test case to check unnecessary directory.
+
 2007-08-09  Kouichirou Eto  <2007 eto.com>
 
 	* lib/qwik/act-ruby.rb: New plugin to embed ruby code.
